<resources>
    <string name="app_name">AppM7</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname"/>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="cerrar">Botón cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>