<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default"
        android:background="#070224">
    
    <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="144dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

    <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="REGISTRARSE"
            android:textColor="#FFD7F9"
            android:textSize="20sp"
            android:fontFamily="@font/julius"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/textView_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="DATOS PERSONALES"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/julius"
            android:layout_marginTop="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_name"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="#DAE3FB"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextInputLayout para Apellido -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/apellido"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="#DAE3FB"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="#DAE3FB"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="#DAE3FB"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="#DAE3FB"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:background="#DAE3FB"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnAceptar"
            android:layout_width="117dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#DAE3FB"
            android:text="Aceptar"
            android:textColor="#000000"
            android:textSize="8sp"
            android:fontFamily="@font/k2d"
            android:clickable="true"
            android:onClick="onInicioButtonClick"/>
</LinearLayout>
